--- a/author-service/package.json
+++ b/author-service/package.json
@@ -5,16 +5,22 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
+    "start": "node dist/index.js",
+    "build": "tsc",
     "generate": "graphql-codegen --config codegen.yml"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@apollo/federation": "^0.32.0",
+    "@graphql-codegen/cli": "2.2.0",
+    "@graphql-codegen/typescript": "2.2.2",
+    "@graphql-codegen/typescript-resolvers": "^2.2.1",
     "apollo-server": "^3.3.0",
     "dotenv": "^10.0.0",
     "entities-practice": "^1.0.5",
     "graphql": "^15.6.0",
+    "graphql-import": "^1.0.2",
     "nodemon": "^2.0.12",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
@@ -22,9 +28,6 @@
     "typeorm": "^0.2.37"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "2.2.0",
-    "@graphql-codegen/typescript": "2.2.2",
-    "@graphql-codegen/typescript-resolvers": "^2.2.1",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
     "eslint": "^7.32.0",
