--- a/books-service/codegen.yml
+++ b/books-service/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: 'http://localhost:4001/graphql'
+schema: '*.graphql'
 documents: null
 generates:
   src/graphql/generated/graphql.ts:
@@ -14,6 +14,4 @@ generates:
         enumValues: change-case#constantCase
       # enumValues:
       # Key: Value
-      mappers:
-        Book: ../../entity#Book
       useIndexSignature: true
